User johns
Date:

    Show black picture, if no video stream is available.
    Setup split into foldable sections.
    Adds show cursor on pointer move and hide after 200ms.
    Adds Hot-key support for auto-crop enable/disable/toggle.
    Adds detached start mode.
    Fix bug: VDPAU looses preemption callback.
    Fix bug: X11 server keeps sending USR1 signals, which confuses suspend.
    Show message for hot-keys.
    Fix bug: playback errors with old PES recordings.
    Adds Hot-key support for 4:3 zoom modes.

User johns
Date: Sat Apr  7 20:21:16 CEST 2012

    Release Version 0.5.0
    Change audio/video delay with hot-key.
    Enable/disable/toggle fullscreen with hot-key (Feature #930).

User: CafeDelMar
Date: Thu Apr  5 22:44:06 CEST 2012

    Cutting pixels are now configured for each resolution.

User johns
Date: Thu Apr 5 15:47:59 CEST 2012

    Buffer less video and audio.
    Fix 100% cpu use, with mp3 plugin.
    Audio/Video sync rewrite, trick-speed support moved to video.
    Faster VdpauBlackSurface version.
    Fix bug: VideoSetPts wrong position for multi frame packets.

User: CafeDelMar
Date: Mon Mar 26 20:45:54 CEST 2012

    Add VideoSkipPixels support.

User johns
Date: Fri Mar 23 18:43:20 CET 2012

    Add optional argument (display) to ATTA svdrp commmand.
    Wakeup display to show OSD for remote learning mode.
    Support switching the primary device with svdrp.
    Disable and reenable screen saver and DPMS.
    Video source code cleanup.
    Fix fast backward with some h264 streams.
    Make soft start sync setup menu configurable.
    Fix bug: StillPicture NAL end of sequence is 10 and not 0x10.
    Fix bug: AudioEnqueue crash without sound card.

User johns
Date: Sun Mar  4 22:35:36 CET 2012

    Release Version 0.4.9
    Experimental ac3 audio drift correction support.
    Removes LPCM detection from TS parser.
    Rewrote video/audio start code.
    Add support for attach/detach plugin.
    OSS needs bigger audio buffers.